kubernetes-networks/canary/web-canary.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-canary
spec:
  replicas: 1 
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: web-canary
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      name: web-canary
      labels:
        app: web-canary
    spec:
      containers:
        - name: web-canary
          image: openresty/openresty:centos-rpm
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-canary-cip
spec:
  selector:
    app: web-canary
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
